[gd_scene load_steps=37 format=3 uid="uid://bx3bh475g3jjf"]

[ext_resource type="Script" path="res://components/motion/3D/first-person/controller/first_person_controller.gd" id="1_v7v7g"]
[ext_resource type="PackedScene" uid="uid://bcj2w63oj13e5" path="res://components/motion/3D/first-person/controller/debug_ui/first_person_debug_ui.tscn" id="2_ml2dd"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/controller/mechanics/camera_controller_3d.gd" id="5_2gxvf"]
[ext_resource type="Script" path="res://components/behaviour/finite-state-machine/finite-state-machine.gd" id="5_xm8yq"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/controller/states/ground/idle.gd" id="6_lht5s"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/controller/states/ground/walk.gd" id="7_52vlc"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/controller/states/air/fall.gd" id="8_5oo54"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/controller/states/ground/crouch.gd" id="8_to2uw"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/controller/states/ground/crawl.gd" id="9_ps4a4"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/controller/states/ground/run.gd" id="10_8ycq6"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/controller/states/air/jump.gd" id="10_ynwvi"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/controller/states/ground/slide.gd" id="11_jpv7j"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/controller/states/special/swim.gd" id="12_vyybp"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/controller/states/air/wall_jump.gd" id="13_uw3wc"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/controller/states/air/wall_run.gd" id="14_2jtjm"]
[ext_resource type="Script" path="res://components/cards/camera/3D/shake/camera_shake_3d.gd" id="14_smxor"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/shooter/weapons/firearm_weapon_holder.gd" id="15_cjftc"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/shooter/weapons/motion/weapon_sway.gd" id="16_2a3la"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/shooter/weapons/motion/weapon_noise.gd" id="17_vpodh"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/shooter/weapons/motion/weapon_tilt.gd" id="18_2tnx5"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/shooter/weapons/motion/weapon_impulse.gd" id="19_bbu1p"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/shooter/weapons/motion/weapon_recoil.gd" id="20_iio1q"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/shooter/weapons/firearm_weapon.gd" id="21_q3kyc"]
[ext_resource type="Script" path="res://components/motion/3D/first-person/footsteps/footstep_manager_3d.gd" id="24_8j70g"]
[ext_resource type="Script" path="res://components/audio/queue/sound_queue.gd" id="25_p87h0"]

[sub_resource type="Animation" id="Animation_x0wk0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CeilShapeCast:target_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.65, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.75, 0)]
}

[sub_resource type="Animation" id="Animation_p5yay"]
resource_name = "crawl"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CeilShapeCast:target_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.1, 0), Vector3(0, -0.3, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.1, 0), Vector3(0, -0.1, 0)]
}

[sub_resource type="Animation" id="Animation_uc3uk"]
resource_name = "crouch"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CeilShapeCast:target_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.65, 0), Vector3(0, 0.1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.75, 0), Vector3(0, 0.1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8y2xj"]
_data = {
"RESET": SubResource("Animation_x0wk0"),
"crawl": SubResource("Animation_p5yay"),
"crouch": SubResource("Animation_uc3uk")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1od8w"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_n3iq5"]
height = 1.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ftet6"]
height = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_plvkn"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_dfk1p"]
noise_type = 3
seed = 50
frequency = 0.02
offset = Vector3(1, 0.5, 0)
fractal_octaves = 1
fractal_lacunarity = 1.0

[sub_resource type="AudioStream" id="AudioStream_sjrlx"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jgm50"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = SubResource("AudioStream_sjrlx")

[node name="FirstPersonController" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.879968, 0)
collision_layer = 2
collision_mask = 21
script = ExtResource("1_v7v7g")
fov_by_state = {
"run": 85.0,
"slide": 80.0
}

[node name="DebugUI" parent="." node_paths=PackedStringArray("actor", "finite_state_machine") instance=ExtResource("2_ml2dd")]
actor = NodePath("..")
finite_state_machine = NodePath("../FiniteStateMachine")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8y2xj")
}

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("5_xm8yq")
current_state = NodePath("Ground/Idle")

[node name="Ground" type="Node" parent="FiniteStateMachine"]

[node name="Idle" type="Node" parent="FiniteStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("6_lht5s")
actor = NodePath("../../..")

[node name="Walk" type="Node" parent="FiniteStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("7_52vlc")
actor = NodePath("../../..")
speed = 4.5
side_speed = 4.2
acceleration = 20.0
friction = 15.0

[node name="Crouch" type="Node" parent="FiniteStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("8_to2uw")
actor = NodePath("../../..")
speed = 2.0
side_speed = 1.9

[node name="Run" type="Node" parent="FiniteStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("10_8ycq6")
actor = NodePath("../../..")
speed = 5.5
side_speed = 5.0
acceleration = 15.0
friction = 12.0

[node name="Crawl" type="Node" parent="FiniteStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("9_ps4a4")
actor = NodePath("../../..")
speed = 1.5
side_speed = 1.4

[node name="Slide" type="Node" parent="FiniteStateMachine/Ground" node_paths=PackedStringArray("actor")]
script = ExtResource("11_jpv7j")
actor = NodePath("../../..")

[node name="Air" type="Node" parent="FiniteStateMachine"]

[node name="Jump" type="Node" parent="FiniteStateMachine/Air" node_paths=PackedStringArray("actor")]
script = ExtResource("10_ynwvi")
actor = NodePath("../../..")

[node name="Fall" type="Node" parent="FiniteStateMachine/Air" node_paths=PackedStringArray("actor")]
script = ExtResource("8_5oo54")
actor = NodePath("../../..")

[node name="Special" type="Node" parent="FiniteStateMachine"]

[node name="Swim" type="Node" parent="FiniteStateMachine/Special" node_paths=PackedStringArray("eyes", "actor")]
script = ExtResource("12_vyybp")
eyes = NodePath("../../../CameraController/Head")
actor = NodePath("../../..")

[node name="WallJump" type="Node" parent="FiniteStateMachine/Special" node_paths=PackedStringArray("actor")]
script = ExtResource("13_uw3wc")
actor = NodePath("../../..")

[node name="WallRun" type="Node" parent="FiniteStateMachine/Special" node_paths=PackedStringArray("actor")]
script = ExtResource("14_2jtjm")
actor = NodePath("../../..")
gravity_force = 0.6

[node name="StandCollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_1od8w")

[node name="CrouchCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.291229, 0)
shape = SubResource("CapsuleShape3D_n3iq5")

[node name="CrawlCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.398812, 0)
shape = SubResource("CapsuleShape3D_ftet6")

[node name="CeilShapeCast" type="ShapeCast3D" parent="."]
shape = SubResource("SphereShape3D_plvkn")
target_position = Vector3(0, 0.65, 0)
debug_shape_custom_color = Color(0, 0.854902, 0, 1)

[node name="WallCheckers" type="Node3D" parent="."]

[node name="FrontCloseWallChecker" type="RayCast3D" parent="WallCheckers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.05)
target_position = Vector3(0, 0, -1)
debug_shape_custom_color = Color(0.613951, 0.141829, 0.230894, 1)

[node name="BackCloseWallChecker" type="RayCast3D" parent="WallCheckers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.05)
target_position = Vector3(0, 0, 1)
debug_shape_custom_color = Color(0.613951, 0.141829, 0.230894, 1)

[node name="RightWallChecker" type="RayCast3D" parent="WallCheckers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.258439, 0)
target_position = Vector3(1.3, 0, -0.8)
debug_shape_custom_color = Color(0.78019, 0.402978, 0.179512, 1)

[node name="RightWallChecker2" type="RayCast3D" parent="WallCheckers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.258439, 0)
target_position = Vector3(1.3, 0, 0.8)
debug_shape_custom_color = Color(0.78019, 0.402978, 0.179512, 1)

[node name="LeftWallChecker" type="RayCast3D" parent="WallCheckers"]
unique_name_in_owner = true
transform = Transform3D(0.999982, 0.00539066, -0.00255976, -0.00539032, 0.999985, 0.000138447, 0.00256046, -0.000124641, 0.999997, 0.00269533, 0.258432, -6.23205e-05)
target_position = Vector3(-1.3, 0, -0.8)
debug_shape_custom_color = Color(0.78019, 0.402978, 0.179512, 1)

[node name="LeftWallChecker2" type="RayCast3D" parent="WallCheckers"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.258439, 0)
target_position = Vector3(-1.3, 0, 0.8)
debug_shape_custom_color = Color(0.78019, 0.402978, 0.179512, 1)

[node name="CameraController" type="Node3D" parent="." node_paths=PackedStringArray("actor", "camera", "bob_head")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
script = ExtResource("5_2gxvf")
actor = NodePath("..")
camera = NodePath("Head/CameraShake3D")
bob_head = NodePath("Head")

[node name="Head" type="Node3D" parent="CameraController"]

[node name="CameraShake3D" type="Camera3D" parent="CameraController/Head"]
script = ExtResource("14_smxor")

[node name="FireArmWeaponHolder" type="Node3D" parent="CameraController/Head/CameraShake3D" node_paths=PackedStringArray("actor", "camera_controller", "camera_recoil_node")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.33, -0.55, -0.56)
script = ExtResource("15_cjftc")
actor = NodePath("../../../..")
camera_controller = NodePath("../../..")
camera_recoil_node = NodePath("../..")

[node name="Sway" type="Node3D" parent="CameraController/Head/CameraShake3D/FireArmWeaponHolder"]
script = ExtResource("16_2a3la")
smoothing = 10.0

[node name="Noise" type="Node3D" parent="CameraController/Head/CameraShake3D/FireArmWeaponHolder/Sway"]
script = ExtResource("17_vpodh")
noise = SubResource("FastNoiseLite_dfk1p")

[node name="Tilt" type="Node3D" parent="CameraController/Head/CameraShake3D/FireArmWeaponHolder/Sway/Noise"]
script = ExtResource("18_2tnx5")

[node name="Impulse" type="Node3D" parent="CameraController/Head/CameraShake3D/FireArmWeaponHolder/Sway/Noise/Tilt"]
script = ExtResource("19_bbu1p")

[node name="Recoil" type="Node3D" parent="CameraController/Head/CameraShake3D/FireArmWeaponHolder/Sway/Noise/Tilt/Impulse"]
script = ExtResource("20_iio1q")

[node name="FireArmWeapon" type="Node3D" parent="CameraController/Head/CameraShake3D/FireArmWeaponHolder/Sway/Noise/Tilt/Impulse/Recoil" node_paths=PackedStringArray("camera")]
script = ExtResource("21_q3kyc")
camera = NodePath("../../../../../../..")

[node name="FootstepsManager3D" type="Node3D" parent="." node_paths=PackedStringArray("floor_detector_raycast", "sound_queue")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.20535, 0)
script = ExtResource("24_8j70g")
floor_detector_raycast = NodePath("FloorDetectorRaycast")
sound_queue = NodePath("SoundQueue")

[node name="FloorDetectorRaycast" type="RayCast3D" parent="FootstepsManager3D"]
collide_with_areas = true
debug_shape_custom_color = Color(0.447865, 0.32889, 0.881494, 1)

[node name="SoundQueue" type="Node" parent="FootstepsManager3D"]
script = ExtResource("25_p87h0")
audio_stream = SubResource("AudioStreamRandomizer_jgm50")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="FootstepsManager3D/SoundQueue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.06458, 0)
bus = &"SFX"
